libs/preprocessor/tests/errors/pe6_change_builtin/stderr.ansi
[31m[PE6] Error:[0m tried changing a built-in macro
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:9[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249md[0m[38;5;249me[0m[38;5;249mf[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[38;5;201m_[0m[38;5;201m_[0m[38;5;201mA[0m[38;5;201mR[0m[38;5;201mM[0m[38;5;201mA[0m[38;5;201m_[0m[38;5;201m_[0m[38;5;249m [0m[38;5;249m0[0m
 [38;5;240m  │[0m         [38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m             [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m built-in macro `[38;5;201m__ARMA__[0m`
[38;5;246m───╯[0m
